Mon Dec  6 10:39:54 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI::Parser#initialize_pattern):
	  refix for restrict the pattern.

Mon Dec  6 09:45:11 2010  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl (OpenSSL): add toplevel documentation
	* ext/openssl/ossl_ssl.c (SSLContext, SSLSocket: add additional
	  documentation
	* ext/openssl: move "let rdoc know about mOSSL" comments so they don't
	  show up in output

Mon Dec  6 09:16:46 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI::Parser#initialize_pattern):
	  workaround fix pattern of hostname for RFC 3986. [ruby-dev:42672]

Mon Dec  6 09:14:38 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/mkmf.rb (check_signedness): rename unused variable prelude.

Sun Dec  5 17:56:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (make_metaclass): fix probable typo.  builtin type flag
	  cannot be used with FL_TEST.

Sun Dec  5 12:09:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/irb/init.rb (IRB.parse_opts): fix typo. [ruby-core:33574]

Sun Dec  5 11:27:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (load_file_internal): decrement for ungotten line.
	  [ruby-dev:42680]

Sun Dec  5 10:32:11 2010  Tanaka Akira  <akr@fsij.org>

	* complex.c: parenthesize macro arguments.

Sat Dec  4 11:39:17 2010  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl_x509ext.c (initialize): add documentation.

Sat Dec  4 11:21:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_update_by): new API for Hash#update.

Sat Dec  4 11:18:10 2010  Tanaka Akira  <akr@fsij.org>

	* class.c: parenthesize macro arguments.

Sat Dec  4 11:07:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_vm_inc_const_missing_count): missing prototype.

Sat Dec  4 08:50:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (Init_iconv): no warnings if $VERBOSE is nil.

Sat Dec  4 08:25:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
